--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "svelte-booksharing-app",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "dotenv": "^8.2.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "sirv-cli": "^1.0.0"
-  }
+	"name": "svelte-app",
+	"version": "1.0.0",
+	"devDependencies": {
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.0.5",
+		"prettier-plugin-svelte": "^1.1.0",
+		"rollup": "^1.10.1",
+		"rollup-plugin-commonjs": "^9.3.4",
+		"rollup-plugin-livereload": "^1.0.0",
+		"rollup-plugin-node-resolve": "^4.2.3",
+		"rollup-plugin-svelte": "^5.0.3",
+		"rollup-plugin-terser": "^4.0.4",
+		"sirv-cli": "^0.4.0",
+		"svelte": "^3.0.0"
+	},
+	"scripts": {
+		"build": "rollup -c",
+		"autobuild": "rollup -c -w",
+		"dev": "run-p start:dev autobuild",
+		"start": "sirv public",
+		"start:dev": "sirv public --dev"
+	}
 }
